--- a/smoky/account_oo.html
+++ b/smoky/account_oo.html
@@ -1841,7 +1841,7 @@
 						<a href="">Оформление заказа</a>
 					</div>
 					<div class="cart">
-						<h2 class="main__title">Корзина</h2>
+						<h2 class="main__title">Заказ №578-01</h2>
 						<div class="carttable">
 							<div class="carttable__row carttable__row_title">
 								<div class="carttable__col carttable__col_1">
@@ -2059,21 +2059,21 @@
 						<div class="delivery">
 							<h2 class="main__title delivery__title">Доставка</h2>
 							<form action="">
-								<div class="delivery__checkcont">
+								<div class="delivery__checkcont delivery__checkcont_ml delivery__checkcont_active">
 									<div class="delivery__img">
 										<img src="img/d1.png" alt="">
 									</div>
-									<input id="del1" type="radio" name="del">
+									<input id="del1" type="radio" name="del" checked>
 									<label for="del1">Самовывоз</label>
 								</div>
 							</form>
 							<h2 class="main__title cartpayment__title">Оплата</h2>
 							<form action="">
-								<div class="payment__checkcont">
+								<div class="payment__checkcont payment__checkcont_ml payment__checkcont_active">
 									<div class="payment__img">
 										<img src="img/d7.png" alt="">
 									</div>
-									<input id="pay1" type="radio" name="pay">
+									<input id="pay1" type="radio" name="pay" checked>
 									<label for="pay1">Безналичный рассчёт</label>
 								</div>
 							</form>
@@ -2091,7 +2091,7 @@
 								<div class="cartpayment__block">
 									<h2 class="cartpayment__subtitle cartpayment__subtitle_b">СУММА ЗАКАЗА</h2>
 									<p class="cartpayment__price">5 399 руб.</p>
-									<button class="showmore">ОФОРМИТЬ ЗАКАЗ</button>
+									<button class="showmore">ВЕРНУТЬСЯ</button>
 								</div>
 							</div>
 						</div>
@@ -2594,8 +2594,10 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/components/jquery.awesomeCloud-0.2.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
+	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
