--- a/smoky/balance.html
+++ b/smoky/balance.html
@@ -2842,8 +2842,10 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
+	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
