--- a/smoky/balance_open.html
+++ b/smoky/balance_open.html
@@ -1876,11 +1876,148 @@
 							<button class="showmore">Очистить всё</button>
 						</div>
 						<div class="balanceopen">
-							<div class="balanceopen__block">
-								<h2 class="balanceopen__title balanceopen__title_active">ВСЕ ПАРАМЕТРЫ</h2>
-								<h2 class="balanceopen__title">ТОЛЬКО ОТЛИЧИЯ</h2>
+							<div class="balanceopen__block balanceopen__block_title">
+								<h2 class="balanceopen__title balanceopen__title_1 balanceopen__title_active">ВСЕ ПАРАМЕТРЫ</h2>
+								<h2 class="balanceopen__title balanceopen__title_2">ТОЛЬКО ОТЛИЧИЯ</h2>
 							</div>
-							<div class="balanceopen__block">
+							<div class="balanceopen__block balanceopen__block_1">
+								<div class="balanceopen__item">
+									<div class="balanceopen__row balanceopen__row_title">
+										<img src="" alt="">
+										<div class="balanceopen__text">
+											<p></p>
+											<p><span></span></p>
+										</div>
+									</div>
+									<div class="balanceopen__row">
+										<p>Насыщенность вкуса</p>
+									</div>
+									<div class="balanceopen__row balanceopen__row_active">
+										<p>Крепость</p>
+									</div>
+									<div class="balanceopen__row">
+										<p>Нарезка</p>
+									</div>
+									<div class="balanceopen__row">
+										<p>Жаростойкость</p>
+									</div>
+									<div class="balanceopen__row">
+										<p>Время курения</p>
+									</div>
+									<div class="balanceopen__row">
+										<p>Дымность</p>
+									</div>
+								</div>
+								<div class="balanceopen__item">
+									<div class="balanceopen__row balanceopen__row_title">
+										<img src="img/balanceimg1.jpg" alt="">
+										<div class="balanceopen__text">
+											<p>Табак для кальяна Serbetli <br>Cherry / Вишня 50 грамм</p>
+											<p><span>90 р.</span></p>
+										</div>
+									</div>
+									<div class="balanceopen__row">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row balanceopen__row_active">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row balanceopen__row_center">
+										<p>мелкая</p>
+									</div>
+									<div class="balanceopen__row">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row balanceopen__row_center">
+										<p>30 - 40 минут</p>
+									</div>
+									<div class="balanceopen__row">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row">
+										<button class="showmore">В КОРЗИНУ</button>
+									</div>
+								</div>
+								<div class="balanceopen__item">
+									<div class="balanceopen__row balanceopen__row_title">
+										<img src="img/balanceimg2.jpg" alt="">
+										<div class="balanceopen__text">
+											<p>Табак для кальяна Serbetli <br>Cherry / Вишня 50 грамм</p>
+											<p><span>90 р.</span></p>
+										</div>
+									</div>
+									<div class="balanceopen__row">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row balanceopen__row_active">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row balanceopen__row_center">
+										<p>мелкая</p>
+									</div>
+									<div class="balanceopen__row">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row balanceopen__row_center">
+										<p>30 - 40 минут</p>
+									</div>
+									<div class="balanceopen__row">
+										<div class="balanceopen__dots">
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot balanceopen__dot_active"></div>
+											<div class="balanceopen__dot"></div>
+											<div class="balanceopen__dot"></div>
+										</div>
+									</div>
+									<div class="balanceopen__row">
+										<button class="showmore">В КОРЗИНУ</button>
+									</div>
+								</div>
+							</div>
+							<div class="balanceopen__block balanceopen__block_2">
 								<div class="balanceopen__item">
 									<div class="balanceopen__row balanceopen__row_title">
 										<img src="" alt="">
@@ -2517,8 +2654,10 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
+	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
