--- a/smoky/constructor.html
+++ b/smoky/constructor.html
@@ -1871,6 +1871,9 @@
 						</div>
 						<div class="constructor__item">
 							<div class="constructor__top">
+								<div class="constructor__part constructor__part_1 click1">
+									<img src="img/const6.png" alt="">
+								</div>
 								<div class="constructor__part constructor__part_2 click2">
 									<img src="img/const1.png" alt="">
 								</div>
@@ -1885,9 +1888,6 @@
 								</div>
 								<div class="constructor__part constructor__part_6 click6">
 									<img src="img/const5.png" alt="">
-								</div>
-								<div class="constructor__part constructor__part_1 click1">
-									<img src="img/const6.png" alt="">
 								</div>
 							</div>
 							<div class="constructor__bottom">
@@ -2615,8 +2615,10 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
+	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
