--- a/smoky/goods.html
+++ b/smoky/goods.html
@@ -1938,13 +1938,16 @@
 										по рейтингу
 									</li>
 									<li data-value="value 1" class="select2__item">
-										от дешевых к дорогим
+										без сортировки
 									</li>
 									<li data-value="value 2" class="select2__item select__item_active">
 										от дорогих к дешевым
 									</li>
 									<li data-value="value 3" class="select2__item">
 										популярные
+									</li>
+									<li data-value="value 4" class="select2__item">
+										от дешевых к дорогим
 									</li>
 								</ul>
 							</div>
@@ -3570,8 +3573,10 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
+	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
