--- a/smoky/wishlist.html
+++ b/smoky/wishlist.html
@@ -1885,7 +1885,7 @@
 										по рейтингу
 									</li>
 									<li data-value="value 1" class="select2__item">
-										от дешевых к дорогим
+										без сортировки
 									</li>
 									<li data-value="value 2" class="select2__item select__item_active">
 										от дорогих к дешевым
@@ -1902,6 +1902,9 @@
 									<li data-value="value 6" class="select2__item">
 										по рейтингу
 									</li>
+									<li data-value="value 7" class="select2__item">
+										от дешевых к дорогим
+									</li>
 								</ul>
 							</div>
 							<div class="sortby">
@@ -1912,7 +1915,7 @@
 										Все
 									</li>
 									<li data-value="value 1" class="select3__item">
-										Кальяны
+										без сортировки
 									</li>
 									<li data-value="value 2" class="select3__item select__item_active">
 										Курительные смеси
@@ -1920,14 +1923,17 @@
 									<li data-value="value 3" class="select3__item">
 										Щипцы
 									</li>
-									<li data-value="value 1" class="select3__item">
+									<li data-value="value 4" class="select3__item">
 										Табаки
 									</li>
-									<li data-value="value 2" class="select3__item select__item_active">
+									<li data-value="value 5" class="select3__item select__item_active">
 										Чай
 									</li>
-									<li data-value="value 3" class="select3__item">
+									<li data-value="value 6" class="select3__item">
 										Щипцы
+									</li>
+									<li data-value="value 7" class="select3__item">
+										Кальяны
 									</li>
 								</ul>
 							</div>
@@ -2663,8 +2669,10 @@
 	-->
 	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
+	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
+	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </body>
 </html>
