--- a/smoky/cart_goods.html
+++ b/smoky/cart_goods.html
@@ -2045,10 +2045,12 @@
 										</div>
 										<div class="goodreview__inputbox">
 											<label for="">Введите код с картинки*:</label>
-											<div class="goodreview__kapcha">
-												<img src="img/kapcha.jpg" alt="">
+											<div class="goodsreview__kapchacont">
+												<div class="goodreview__kapcha">
+													<img src="img/kapcha.jpg" alt="">
+												</div>
+												<input class="goodreview__input goodreview__input_3" type="text" placeholder="Введите код сюда">
 											</div>
-											<input class="goodreview__input goodreview__input_3" type="text" placeholder="Введите код сюда">
 										</div>
 									</div>
 									<button class="showmore">ОТПРАВИТЬ ОТЗЫВ</button>
