--- a/smoky/cart_goods.html
+++ b/smoky/cart_goods.html
@@ -2045,7 +2045,7 @@
 										</div>
 										<div class="goodreview__inputbox">
 											<label for="">Введите код с картинки*:</label>
-											<div class="goodsreview__kapchacont">
+											<div class="goodreview__kapchacont">
 												<div class="goodreview__kapcha">
 													<img src="img/kapcha.jpg" alt="">
 												</div>
