--- a/smoky/index.html
+++ b/smoky/index.html
@@ -2111,6 +2111,11 @@
 									<span>20:30:46</span>
 								</div>
 							</div>
+							<div class="popular__moreimg">
+								<a href=""><img src="img/mini1.jpg" alt=""></a>
+								<a href=""><img src="img/mini2.jpg" alt=""></a>
+								<a href=""><img src="img/mini3.jpg" alt=""></a>
+							</div>
 							<div class="popular__img">
 								<img src="img/pop1.jpg" alt="">
 							</div>
@@ -3306,12 +3311,12 @@
 	
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
-	<script type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
 	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
