--- a/smoky/constructor.html
+++ b/smoky/constructor.html
@@ -1846,48 +1846,66 @@
 							<img src="img/constmain.png" class="constructor__mainimg" alt="">
 							<div class="kalitem kalitem_1">
 								<img src="img/part1.png" class="kalitem__img kalitem__img_1 click21" alt="">
-								<img src="img/title1.png" alt="" class="kalitem__title kalitem__title_1 click31">
+								<div class="kalitem__title kalitem__title_1 click31">
+									<span>Лотой</span>
+									<img src="img/title1.png" alt="">
+								</div>
 							</div>
 							<div class="kalitem kalitem_2">
 								<img src="img/part2.png" class="kalitem__img kalitem__img_2 click22" alt="">
-								<img src="img/title2.png" alt="" class="kalitem__title kalitem__title_2 click32">
+								<div class="kalitem__title kalitem__title_2 click32">
+									<span>Чаша</span>
+									<img src="img/title2.png" alt="">
+								</div>
 							</div>
 							<div class="kalitem kalitem_3">
 								<img src="img/part3.png" class="kalitem__img kalitem__img_3 click23" alt="">
-								<img src="img/title3.png" alt="" class="kalitem__title kalitem__title_3 click33">
+								<div class="kalitem__title kalitem__title_3 click33">
+									<span>Тарелка</span>
+									<img src="img/title3.png" alt="">
+								</div>
 							</div>
 							<div class="kalitem kalitem_4">
 								<img src="img/part4.png" class="kalitem__img kalitem__img_4 click24" alt="">
-								<img src="img/title4.png" alt="" class="kalitem__title kalitem__title_4 click34">
+								<div class="kalitem__title kalitem__title_4 click34">
+									<span>Шахта</span>
+									<img src="img/title4.png" alt="">
+								</div>
 							</div>
 							<div class="kalitem kalitem_5">
 								<img src="img/part5.png" class="kalitem__img kalitem__img_5 click25" alt="">
-								<img src="img/title5.png" alt="" class="kalitem__title kalitem__title_5 click35">
+								<div class="kalitem__title kalitem__title_5 click35">
+									<span>Шланг</span>
+									<img src="img/title5.png" alt="">
+								</div>
 							</div>
 							<div class="kalitem kalitem_6 click26">
 								<img src="img/part6.png" class="kalitem__img kalitem__img_6 click26" alt="">
-								<img src="img/title6.png" alt="" class="kalitem__title kalitem__title_6 click36">
+								<div class="kalitem__title kalitem__title_6 click36">
+									<span>Колба</span>
+									<img src="img/title6.png" alt="">
+								</div>
 							</div>
 						</div>
 						<div class="constructor__item">
 							<div class="constructor__top">
 								<div class="constructor__part constructor__part_1 click1">
-									<img src="img/const6.png" alt="">
+									<i></i>
 								</div>
 								<div class="constructor__part constructor__part_2 click2">
-									<img src="img/const1.png" alt="">
+									<i></i>
 								</div>
 								<div class="constructor__part constructor__part_3 click3">
-									<img src="img/const2.png" alt="">
+									<i></i>
 								</div>
 								<div class="constructor__part constructor__part_4 click4">
-									<img src="img/const3.png" alt="">
+									<i></i>
 								</div>
 								<div class="constructor__part constructor__part_5 click5">
-									<img src="img/const4.png" alt="">
+									<i></i>
 								</div>
 								<div class="constructor__part constructor__part_6 click6">
-									<img src="img/const5.png" alt="">
+									<i></i>
 								</div>
 							</div>
 							<div class="constructor__bottom">
