--- a/smoky/index.html
+++ b/smoky/index.html
@@ -1710,6 +1710,8 @@
 							<span class="interview__tab interview__tab_active">1</span>
 							<span class="interview__tab">2</span>
 							<span class="interview__tab">3</span>
+							<span class="interview__tab">4</span>
+							<span class="interview__tab">5</span>
 						</div>
 						<div class="interview__block interview__block_1">
 							<p class="interview__question">Как часто Вы курите кальян?</p>
@@ -1720,9 +1722,6 @@
 								<input id="gr4" type="radio" name="group" value="Раз в месяц"><label for="gr4">Раз в месяц</label><br>
 							</form>	
 							<button class="showmore">ПРОГОЛОСОВАТЬ</button>
-						</div>
-						<div class="interview__block">
-							<button class="showmore">ВСЕ ОПРОСЫ</button>
 						</div>
 					</div>
 				</div>
