--- a/smoky/cart.html
+++ b/smoky/cart.html
@@ -1691,9 +1691,6 @@
 							</form>	
 							<button class="showmore">ПРОГОЛОСОВАТЬ</button>
 						</div>
-						<div class="interview__block">
-							<button class="showmore">ВСЕ ОПРОСЫ</button>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -2032,7 +2029,7 @@
 						<div class="perinfo">
 							<h2 class="main__title">Личные данные</h2>
 							<div class="perinfo__butts">
-								<button class="showmore">ВОЙТИ В АККАУНТ</button>
+								<button class="showmore modal-run5">ВОЙТИ В АККАУНТ</button>
 								<button class="showmore showmore_active">БЫСТРЫЙ ЗАКАЗ</button>
 							</div>
 							<p class="perinfo__p">Войдите и получайте с каждого заказа баллы</p>
@@ -2171,6 +2168,88 @@
 					<button class="modalform__button modalform__button_orange">нет, мне меньше 18</button>
 				</div>
 				<p class="modalform__welcome">Добро пожаловать и приятных покупок!</p>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
+			<div class="modalform modallog">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Вход в аккаунт</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<button class="showmore">Войти</button>
+					</form>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__soccont">
+						<p>Войти через социальные сети:</p>
+						<div class="socials">
+							<a href=""><img src="img/f1.png" alt=""></a>
+							<a href=""><img src="img/f2.png" alt=""></a>
+							<a href=""><img src="img/f3.png" alt=""></a>
+							<a href=""><img src="img/f4.png" alt=""></a>
+							<a href=""><img src="img/f5.png" alt=""></a>
+						</div>
+					</div>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__reg">
+						<p>Нет учётной записи?</p>
+						<a href="" class="modal-run6">Зарегистрироваться</a>
+					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+			<!--Modal window-->
+			<div class="modalform modalreg">
+				<span class="modal__close"><i class="fa fa-times" aria-hidden="true"></i></span>
+				<h2 class="modalform__title modalcall__title">Регистрация</h2>
+				<div class="loginpop__box loginpop__box_1">
+					<form action="">
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<div class="loginpop__input">
+							<p>Электронная почта (E-mail)*</p>
+							<input type="email" placeholder="example@google.com">
+						</div>
+						<div class="loginpop__input">
+							<p>Пароль*</p>
+							<input type="password" placeholder="Введите пароль">
+						</div>
+						<a href="" class="loginpop__pass">Забыли пароль?</a>
+						<button class="showmore">Зарегистрироваться</button>
+					</form>
+				</div>
+				<div class="loginpop__box">
+					<div class="loginpop__soccont">
+						<p>Войти через социальные сети:</p>
+						<div class="socials">
+							<a href=""><img src="img/f1.png" alt=""></a>
+							<a href=""><img src="img/f2.png" alt=""></a>
+							<a href=""><img src="img/f3.png" alt=""></a>
+							<a href=""><img src="img/f4.png" alt=""></a>
+							<a href=""><img src="img/f5.png" alt=""></a>
+						</div>
+					</div>
+				</div>
+				<!-- <div class="loginpop__box">
+					<div class="loginpop__reg">
+						<p>Нет учётной записи?</p>
+						<a href="" class="modal-run6">Зарегистрироваться</a>
+					</div>
+				</div> -->
 			</div>
 			<div class="overlay"></div>
 			<!--Modal window end-->
