--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1872,7 +1872,9 @@
 										Рады стараться для Вас ;)
 									</p>
 								</div>
-							</div>
+							</div>							
+						</div>
+						<div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
 								<div class="description__item description__item_m">
 									<div class="description__left">
@@ -1910,6 +1912,8 @@
 									</p>
 								</div>
 							</div>
+						</div>
+						<div class="goodsinfo__desc description feedback">
 							<div class="description__box feedback__box_grey">
 								<div class="description__item description__item_m">
 									<div class="description__left">
