--- a/smoky/index.html
+++ b/smoky/index.html
@@ -1707,13 +1707,53 @@
 					<h2 class="interview__title">опрос</h2>
 					<div class="interview__cont">
 						<div class="interview__tabs">
-							<span class="interview__tab interview__tab_active">1</span>
-							<span class="interview__tab">2</span>
-							<span class="interview__tab">3</span>
-							<span class="interview__tab">4</span>
-							<span class="interview__tab">5</span>
+							<span class="interview__tab interview__tab_1 interview__tab_active">1</span>
+							<span class="interview__tab interview__tab_2">2</span>
+							<span class="interview__tab interview__tab_3">3</span>
+							<span class="interview__tab interview__tab_4">4</span>
+							<span class="interview__tab interview__tab_5">5</span>
 						</div>
 						<div class="interview__block interview__block_1">
+							<p class="interview__question">Как часто Вы курите кальян?</p>
+							<form action="">
+								<input id="gr1" type="radio" name="group" value="Раз в несколько дней"><label for="gr1">Раз в несколько дней</label><br>
+								<input id="gr2" type="radio" name="group" value="Раз в неделю"><label for="gr2">Раз в неделю</label><br>
+								<input id="gr3" type="radio" name="group" value="Раз в день"><label for="gr3">Раз в день</label><br>
+								<input id="gr4" type="radio" name="group" value="Раз в месяц"><label for="gr4">Раз в месяц</label><br>
+							</form>	
+							<button class="showmore">ПРОГОЛОСОВАТЬ</button>
+						</div>
+						<div class="interview__block interview__block_2">
+							<p class="interview__question">Как часто Вы курите кальян?</p>
+							<form action="">
+								<input id="gr1" type="radio" name="group" value="Раз в несколько дней"><label for="gr1">Раз в несколько дней</label><br>
+								<input id="gr2" type="radio" name="group" value="Раз в неделю"><label for="gr2">Раз в неделю</label><br>
+								<input id="gr3" type="radio" name="group" value="Раз в день"><label for="gr3">Раз в день</label><br>
+								<input id="gr4" type="radio" name="group" value="Раз в месяц"><label for="gr4">Раз в месяц</label><br>
+							</form>	
+							<button class="showmore">ПРОГОЛОСОВАТЬ</button>
+						</div>
+						<div class="interview__block interview__block_3">
+							<p class="interview__question">Как часто Вы курите кальян?</p>
+							<form action="">
+								<input id="gr1" type="radio" name="group" value="Раз в несколько дней"><label for="gr1">Раз в несколько дней</label><br>
+								<input id="gr2" type="radio" name="group" value="Раз в неделю"><label for="gr2">Раз в неделю</label><br>
+								<input id="gr3" type="radio" name="group" value="Раз в день"><label for="gr3">Раз в день</label><br>
+								<input id="gr4" type="radio" name="group" value="Раз в месяц"><label for="gr4">Раз в месяц</label><br>
+							</form>	
+							<button class="showmore">ПРОГОЛОСОВАТЬ</button>
+						</div>
+						<div class="interview__block interview__block_4">
+							<p class="interview__question">Как часто Вы курите кальян?</p>
+							<form action="">
+								<input id="gr1" type="radio" name="group" value="Раз в несколько дней"><label for="gr1">Раз в несколько дней</label><br>
+								<input id="gr2" type="radio" name="group" value="Раз в неделю"><label for="gr2">Раз в неделю</label><br>
+								<input id="gr3" type="radio" name="group" value="Раз в день"><label for="gr3">Раз в день</label><br>
+								<input id="gr4" type="radio" name="group" value="Раз в месяц"><label for="gr4">Раз в месяц</label><br>
+							</form>	
+							<button class="showmore">ПРОГОЛОСОВАТЬ</button>
+						</div>
+						<div class="interview__block interview__block_5">
 							<p class="interview__question">Как часто Вы курите кальян?</p>
 							<form action="">
 								<input id="gr1" type="radio" name="group" value="Раз в несколько дней"><label for="gr1">Раз в несколько дней</label><br>
