--- a/smoky/balance_open.html
+++ b/smoky/balance_open.html
@@ -1878,7 +1878,7 @@
 								<h2 class="balanceopen__title balanceopen__title_2">ТОЛЬКО ОТЛИЧИЯ</h2>
 							</div>
 							<div class="balanceopen__block balanceopen__block_1">
-								<div class="balanceopen__item">
+								<div class="balanceopen__item balanceopen__item_title">
 									<div class="balanceopen__row balanceopen__row_title">
 										<img src="" alt="">
 										<div class="balanceopen__text">
@@ -1914,6 +1914,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Насыщенность вкуса</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1923,6 +1924,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_active">
+										<p class="balanceopen__row_p">Крепость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1932,9 +1934,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Нарезка</p>
 										<p>мелкая</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Жаростойкость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1944,9 +1948,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Время курения</p>
 										<p>30 - 40 минут</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Дымность</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1968,6 +1974,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Насыщенность вкуса</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1977,6 +1984,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_active">
+										<p class="balanceopen__row_p">Крепость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1986,9 +1994,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Нарезка</p>
 										<p>мелкая</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Жаростойкость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -1998,9 +2008,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Время курения</p>
 										<p>30 - 40 минут</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Дымность</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2015,7 +2027,7 @@
 								</div>
 							</div>
 							<div class="balanceopen__block balanceopen__block_2">
-								<div class="balanceopen__item">
+								<div class="balanceopen__item balanceopen__item_title">
 									<div class="balanceopen__row balanceopen__row_title">
 										<img src="" alt="">
 										<div class="balanceopen__text">
@@ -2051,6 +2063,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Насыщенность вкуса</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2060,6 +2073,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_active">
+										<p class="balanceopen__row_p">Крепость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2069,9 +2083,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Нарезка</p>
 										<p>мелкая</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Жаростойкость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2081,9 +2097,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Время курения</p>
 										<p>30 - 40 минут</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Дымность</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2105,6 +2123,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Насыщенность вкуса</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2114,6 +2133,7 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_active">
+										<p class="balanceopen__row_p">Крепость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2123,9 +2143,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Нарезка</p>
 										<p>мелкая</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Жаростойкость</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
@@ -2135,9 +2157,11 @@
 										</div>
 									</div>
 									<div class="balanceopen__row balanceopen__row_center">
+										<p class="balanceopen__row_p">Время курения</p>
 										<p>30 - 40 минут</p>
 									</div>
 									<div class="balanceopen__row">
+										<p class="balanceopen__row_p">Дымность</p>
 										<div class="balanceopen__dots">
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
 											<div class="balanceopen__dot balanceopen__dot_active"></div>
