--- a/smoky/feedback.html
+++ b/smoky/feedback.html
@@ -1973,6 +1973,7 @@
 								<i class="fa fa-angle-right" aria-hidden="true"></i>
 							</div>
 						</div>
+						<button class="showmore feedback__showmore">ПОКАЗАТЬ ВСЕ</button>
 						<div class="goodreview">
 							<h3 class="goodreview__title">Оставьте Ваш отзыв о товаре</h3>
 							<div class="goodreview__rating">
