--- a/smoky/index.html
+++ b/smoky/index.html
@@ -5017,7 +5017,7 @@
 
 <!-- BODY EOF   -->
 	
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>		
+	<<script src="http://code.jquery.com/jquery.min.js"></script>		
 	<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js" ></script>
 	<!--
 	<script type="text/javascript" src="js/components/jquery.fancybox.js" ></script>
@@ -5031,7 +5031,7 @@
 	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script src="js/components/smoothproducts.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script src="js/jquery.ui.touch-punch.min.js"></script>
 	<script type="text/javascript" src="js/custom.js" ></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 </body>
 </html>
