--- a/smoky/index.html
+++ b/smoky/index.html
@@ -5030,7 +5030,7 @@
 	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
 	<script src="js/components/smoothproducts.min.js"></script>
-	<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script src="js/jquery.ui.touch-punch.min.js"></script>
 	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
