--- a/smoky/index.html
+++ b/smoky/index.html
@@ -5017,7 +5017,7 @@
 
 <!-- BODY EOF   -->
 	
-	<<script src="http://code.jquery.com/jquery.min.js"></script>		
+	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>	
 	<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js" ></script>
 	<!--
 	<script type="text/javascript" src="js/components/jquery.fancybox.js" ></script>
