--- a/smoky/constructor.html
+++ b/smoky/constructor.html
@@ -1920,8 +1920,8 @@
 							<a href="">гарантии</a>
 						</li>
 						<li>
-							<a href="">каталог</a>
-							<div class="dropdown dropdowncatalog">
+							<a href="constructor.html">конструктор</a>
+							<!-- <div class="dropdown dropdowncatalog">
 								<ul>
 									<li class="dropdown__title"><i class="sidenav__svg_1" style=""></i><a href="">кальяны</a></li>
 									<li><a href="">Российские</a></li>
@@ -2042,7 +2042,7 @@
 									<li><a href="">Подарочные наборы</a></li>
 									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
 								</ul>
-							</div>
+							</div> -->
 						</li>
 					</ul>
 				</nav>
@@ -2055,43 +2055,43 @@
 					<div class="constructor">
 						<div class="constructor__main">
 							<img src="img/constmain.png" class="constructor__mainimg" alt="">
-							<div class="kalitem kalitem_1">
-								<img src="img/part1.png" class="kalitem__img kalitem__img_1 click21" alt="">
+							<div class="kalitem kalitem_1 click21">
+								<img src="img/part1.png" class="kalitem__img kalitem__img_1" alt="">
 								<div class="kalitem__title kalitem__title_1 click31">
 									<span>Лотой</span>
 									<img src="img/title1.png" alt="">
 								</div>
 							</div>
-							<div class="kalitem kalitem_2">
-								<img src="img/part2.png" class="kalitem__img kalitem__img_2 click22" alt="">
+							<div class="kalitem kalitem_2 click22">
+								<img src="img/part2.png" class="kalitem__img kalitem__img_2" alt="">
 								<div class="kalitem__title kalitem__title_2 click32">
 									<span>Чаша</span>
 									<img src="img/title2.png" alt="">
 								</div>
 							</div>
-							<div class="kalitem kalitem_3">
-								<img src="img/part3.png" class="kalitem__img kalitem__img_3 click23" alt="">
+							<div class="kalitem kalitem_3 click23">
+								<img src="img/part3.png" class="kalitem__img kalitem__img_3" alt="">
 								<div class="kalitem__title kalitem__title_3 click33">
 									<span>Тарелка</span>
 									<img src="img/title3.png" alt="">
 								</div>
 							</div>
-							<div class="kalitem kalitem_4">
-								<img src="img/part4.png" class="kalitem__img kalitem__img_4 click24" alt="">
+							<div class="kalitem kalitem_4 click24">
+								<img src="img/part4.png" class="kalitem__img kalitem__img_4" alt="">
 								<div class="kalitem__title kalitem__title_4 click34">
 									<span>Шахта</span>
 									<img src="img/title4.png" alt="">
 								</div>
 							</div>
-							<div class="kalitem kalitem_5">
-								<img src="img/part5.png" class="kalitem__img kalitem__img_5 click25" alt="">
+							<div class="kalitem kalitem_5 click25">
+								<img src="img/part5.png" class="kalitem__img kalitem__img_5" alt="">
 								<div class="kalitem__title kalitem__title_5 click35">
 									<span>Шланг</span>
 									<img src="img/title5.png" alt="">
 								</div>
 							</div>
 							<div class="kalitem kalitem_6 click26">
-								<img src="img/part6.png" class="kalitem__img kalitem__img_6 click26" alt="">
+								<img src="img/part6.png" class="kalitem__img kalitem__img_6" alt="">
 								<div class="kalitem__title kalitem__title_6 click36">
 									<span>Колба</span>
 									<img src="img/title6.png" alt="">
