--- a/smoky/goods.html
+++ b/smoky/goods.html
@@ -1920,8 +1920,8 @@
 							<a href="">гарантии</a>
 						</li>
 						<li>
-							<a href="">каталог</a>
-							<div class="dropdown dropdowncatalog">
+							<a href="">конструктор</a>
+							<!-- <div class="dropdown dropdowncatalog">
 								<ul>
 									<li class="dropdown__title"><i class="sidenav__svg_1" style=""></i><a href="">кальяны</a></li>
 									<li><a href="">Российские</a></li>
@@ -2042,7 +2042,7 @@
 									<li><a href="">Подарочные наборы</a></li>
 									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
 								</ul>
-							</div>
+							</div> -->
 						</li>
 					</ul>
 				</nav>
