--- a/smoky/index.html
+++ b/smoky/index.html
@@ -43,7 +43,7 @@
 										<div class="pricefilter__cont">
 											<div class="pricefilter__input">
 												<span>от:</span>
-												<input type="text" id="minCost" value="0"/>
+												<input type="text" id="minCost" pattern="[0-9]*" inputmode="numeric" value="0"/>
 											</div>
 											<div class="pricefilter__line"></div>
 											<div class="pricefilter__input">
@@ -1920,8 +1920,8 @@
 							<a href="">гарантии</a>
 						</li>
 						<li>
-							<a href="">каталог</a>
-							<div class="dropdown dropdowncatalog">
+							<a href="constructor.html">конструктор</a>
+							<!-- <div class="dropdown dropdowncatalog">
 								<ul>
 									<li class="dropdown__title"><i class="sidenav__svg_1" style=""></i><a href="">кальяны</a></li>
 									<li><a href="">Российские</a></li>
@@ -2042,7 +2042,7 @@
 									<li><a href="">Подарочные наборы</a></li>
 									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
 								</ul>
-							</div>
+							</div> -->
 						</li>
 					</ul>
 				</nav>
