--- a/smoky/cart.html
+++ b/smoky/cart.html
@@ -1919,8 +1919,8 @@
 							<a href="">гарантии</a>
 						</li>
 						<li>
-							<a href="">каталог</a>
-							<div class="dropdown dropdowncatalog">
+							<a href="constructor.html">конструктор</a>
+							<!-- <div class="dropdown dropdowncatalog">
 								<ul>
 									<li class="dropdown__title"><i class="sidenav__svg_1" style=""></i><a href="">кальяны</a></li>
 									<li><a href="">Российские</a></li>
@@ -2041,7 +2041,7 @@
 									<li><a href="">Подарочные наборы</a></li>
 									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
 								</ul>
-							</div>
+							</div> -->
 						</li>
 					</ul>
 				</nav>
@@ -2133,7 +2133,7 @@
 								</div>
 								<div class="carttable__col carttable__col_6">
 									<div class="carttable__item carttable__item_c">
-										<div class="carttable__remove">
+										<div class="carttable__remove carttable__remove_mob">
 											<img src="img/close1.png" alt="">
 										</div>
 									</div>
@@ -2182,7 +2182,7 @@
 								</div>
 								<div class="carttable__col carttable__col_6">
 									<div class="carttable__item carttable__item_c">
-										<div class="carttable__remove">
+										<div class="carttable__remove carttable__remove_mob">
 											<img src="img/close1.png" alt="">
 										</div>
 									</div>
@@ -2231,7 +2231,7 @@
 								</div>
 								<div class="carttable__col carttable__col_6">
 									<div class="carttable__item carttable__item_c">
-										<div class="carttable__remove">
+										<div class="carttable__remove carttable__remove_mob">
 											<img src="img/close1.png" alt="">
 										</div>
 									</div>
@@ -2353,6 +2353,8 @@
 									<p class="cartpayment__p"><b>Количество товаров</b><span>5</span></p>
 									<p class="cartpayment__p"><b>Товаров на сумму</b><span>6 600 руб.</span></p>
 									<p class="cartpayment__p"><b>Скидки</b><span>1 201 руб.</span></p>
+									<p class="cartpayment__p"><b>Доставка</b><span>50 руб.</span></p>
+									<p class="cartpayment__p"><b>Сумма</b><span>50 руб.</span></p>
 									<a href="">Есть купон или промокод?</a>
 								</div>
 								<div class="cartpayment__border"></div>
