--- a/smoky/index.html
+++ b/smoky/index.html
@@ -43,7 +43,7 @@
 										<div class="pricefilter__cont">
 											<div class="pricefilter__input">
 												<span>от:</span>
-												<input type="number" id="minCost" min="0" inputmode="numeric" pattern="[0-9]*" onkeypress='validate(event)'>
+												<input type="text" id="minCost" min="0" inputmode="numeric" pattern="[0-9]*" onkeypress='validate(event)'>
 											</div>
 											<div class="pricefilter__line"></div>
 											<div class="pricefilter__input">
