--- a/smoky/index.html
+++ b/smoky/index.html
@@ -3001,7 +3001,7 @@
 										<div class="pricefilter__cont">
 											<div class="pricefilter__input">
 												<span>от:</span>
-												<input type="text" id="minCost" value="0">
+												<input type="number" id="minCost" min="0" pattern="[0-9]*">
 											</div>
 											<div class="pricefilter__line"></div>
 											<div class="pricefilter__input">
